Changed hand of cards to linked list